--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fips - Minimalist Furniture</title>
-    <link rel="stylesheet" href="/assests/css/common.css">
-    <link rel="stylesheet" href="/assests/css/style.css">
+    <link rel="stylesheet" href="../assests/css/common.css">
+    <link rel="stylesheet" href="../assests/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
@@ -33,9 +33,9 @@
                     <button>Our store</button>
                 </div>
                 <div class="khoianh">
-                    <img class="anhnho" src="/assests/image/1.png" alt="anh1">
-                    <img class="anhnho anh2" src="/assests/image/2.png" alt="anh2">
-                    <img class="anhnho" src="/assests/image/3.png" alt="anh3">
+                    <img class="anhnho" src="../assests/image/1.png" alt="anh1">
+                    <img class="anhnho anh2" src="../assests/image/2.png" alt="anh2">
+                    <img class="anhnho" src="../assests/image/3.png" alt="anh3">
                 </div>
                 
             </div>
