--- a/html/customerCare.html
+++ b/html/customerCare.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer care</title>
-    <link rel="stylesheet" href="/assests/css/common.css">
-    <link rel="stylesheet" href="/assests/css/customerCare.css">
+    <link rel="stylesheet" href="../assests/css/common.css">
+    <link rel="stylesheet" href="../assests/css/customerCare.css">
 </head>
 <body>
     <div class="content">
