add another file

--- a/html/customerCare.html
+++ b/html/customerCare.html
@@ -25,7 +25,7 @@
         <!-- content -->
         <div class="main">
             <div class="divanh">
-                <img src="/assests/image/anhpagecustomer.png" alt="">
+                <img src="../assests/image/anhpagecustomer.png" alt="">
                 <div class="divanh_text font48 ml252">Have questions?</div>
             </div>
             <div class="divchu ml252">
